Adding CSS resets and glassmorph effect
I added a CSS reset since I was experiencing some issues with the <ul>. Additionally, I added a glassmorphism to the .social-links-container starting from line 32 to line 37.

Finally, I changed the color of the buttons.

--- a/style.css
+++ b/style.css
@@ -1,14 +1,24 @@
+/* CSS resets */
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 
 /* General styles */
 body {
-    background: black;
+    background-image: linear-gradient(rgb(0, 0, 0), rgb(33, 93, 83));
+    background-size: cover;
     color: white;
     font-family: 'Inter', sans-serif;
     margin: 0px;
     padding: 0px;
+    height: 100vh; /* Ensure body covers the full viewport height */
 }
 
-/* Styles for the "social links" container */
+/* Styles for the "social links" container, including a glassmorphism effect starting at line 32 */
 
 .social-links-container {
     display: flex;
@@ -17,11 +27,14 @@ body {
     margin-top: 50px;
     justify-content: center;
     flex-direction: column;
-    width: 340px;
-    height: 590px;
-    background: #1f1f1f;
-    border-radius: 10px;
-    box-shadow: 0px 0px 20px #1F1F1F;
+    width: 300px;
+    height: 540px;
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border: 1px solid rgba(255, 255, 255, 0.2);
 }
 
 /* Styles for the main avatar */
@@ -56,10 +69,6 @@ h1 {
 
 .list-container {
     list-style-type: none;
-    justify-content: center;
-    margin-top: 0px;
-    width: 87%; /* Modifies the width of the list-container so the space on the left after removing the bullet points with
-    list-style-type does not exist anymore */
 }
 
 /* Styles for the buttons */
@@ -70,10 +79,11 @@ a.button {
     text-align: center;
     align-items: center;
     align-content: center;
-    margin: 10px 40px 10px 4px;
+    margin: 10px 30px 10px 30px;
+    gap: 50px;
     padding: 15px 40px;
     cursor:pointer;
-    background-color: #333333;
+    background-color: #273a3a;
     color: white;
     font:inherit;
     font-size: 14px;
