Adding fade-in effect
I added @keyframes fadeIn to add a fade-in effect to the "social links container". Additionally, I added vendor prefixed to maximize cross-browser compatibility.

--- a/style.css
+++ b/style.css
@@ -35,7 +35,43 @@ body {
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
     border: 1px solid rgba(255, 255, 255, 0.2);
+    animation: fadeIn 5s;
 }
+
+/* Fade-in effect on the container*/
+
+@keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+  }
+  
+  /* Mozilla Firefox's vendor prefix */
+
+  @-moz-keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+  }
+
+   /* Chrome, and Safari's vendor prefix */
+   
+  @-webkit-keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+  }
+
+  /* Opera's vendor prefix */
+
+  @-o-keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+  }
+
+  /* IE's vendor prefix */
+
+  @-ms-keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+  }
 
 /* Styles for the main avatar */
 
